--- a/src/app/posts/post/post.component.html
+++ b/src/app/posts/post/post.component.html
@@ -1,9 +1,9 @@
-<div class="card">
+<div class="card col-11 p-0 mr-0" *ngIf="post">
   <div class="card-header">
     Created on: {{ post.dateCreated }}
   </div>
   <div class="card-body">
     <h5 class="card-title">{{ post.title }}</h5>
-    <a href="#" class="btn btn-primary">Read more >>></a>
+    <a [routerLink]="['/posts',post.id]" class="btn btn-primary">Read more >>></a>
   </div>
 </div>
