--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,4 +1,6 @@
-<app-post
-*ngFor="let post of posts"
-[post]="post"
-></app-post>
+<div class="pt-5">
+  <app-post
+    *ngFor="let post of posts"
+    [post]="post"
+  ></app-post>
+</div>
