--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -7,6 +7,9 @@
         <a routerLink="/" class="nav-link">Home</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
+        <a routerLink="/posts" class="nav-link">Posts</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
         <a routerLink="/" class="nav-link">Add</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
