--- a/src/app/posts/manage-posts/post-details/post-details.component.html
+++ b/src/app/posts/manage-posts/post-details/post-details.component.html
@@ -8,10 +8,29 @@
         <p>{{ post.description }}</p>
       </div>
       <div class="card-footer">
-        <p class="m-0">Manage dish:</p>
+        <p class="m-0">Manage post:</p>
         <button class="btn btn-primary">Edit</button>&ngsp;
-        <button class="btn btn-danger" (click)="onDeletePost()">Delete</button>
+        <button class="btn btn-danger" (click)="openCheckOutModal()">Delete</button>
       </div>
     </div>
   </div>
 </div>
+<app-modal
+  title="Are you sure?"
+  [isOpen]="modalOpen"
+  (close)="closeCheckoutModal()"
+>
+  <div class="modal-body">
+    <p>Do you want to delete this post?</p>
+  </div>
+  <div class="modal-footer">
+    <button
+      class="btn btn-danger"
+      (click)="closeCheckoutModal()"
+    >Cancel</button>
+    <button
+      class="btn btn-success"
+      (click)="onDeletePost()"
+    >Delete</button>
+  </div>
+</app-modal>
