--- a/src/app/posts/post/post.component.html
+++ b/src/app/posts/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="card col-11 p-0 mr-0" *ngIf="post">
+<div class="card col-11 p-0 mr-0 mb-3" *ngIf="post">
   <div class="card-header">
     Created on: {{ post.dateCreated }}
   </div>
