edit-add post was made

--- a/src/app/posts/manage-posts/post-details/post-details.component.html
+++ b/src/app/posts/manage-posts/post-details/post-details.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="card-footer">
         <p class="m-0">Manage post:</p>
-        <button class="btn btn-primary">Edit</button>&ngsp;
+        <a class="btn btn-primary" [routerLink]="['edit']">Edit</a>&ngsp;
         <button class="btn btn-danger" (click)="openCheckOutModal()">Delete</button>
       </div>
     </div>
