--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -13,7 +13,7 @@
         <a routerLink="/posts/add" class="nav-link">Add</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a routerLink="/" class="nav-link">About</a>
+        <a routerLink="/about" class="nav-link">About</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a routerLink="/" class="nav-link">Contacts</a>
