--- a/src/app/posts/manage-posts/manage-posts.component.html
+++ b/src/app/posts/manage-posts/manage-posts.component.html
@@ -1,4 +1,9 @@
-<div class="row mt-2">
+<div class="lds-circle spinner-center" *ngIf="loading"><div></div></div>
+<div
+  class="modal-backdrop show"
+  [ngStyle]="{display: loading ? 'block' : 'none'}"
+></div>
+<div class="row mt-2" *ngIf="!loading">
   <div class="col">
     <h4>Manage posts</h4>
     <a *ngFor="let post of posts"
