--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -16,7 +16,7 @@
         <a routerLink="/about" class="nav-link">About</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a routerLink="/" class="nav-link">Contacts</a>
+        <a routerLink="/contacts" class="nav-link">Contacts</a>
       </li>
     </ul>
   </div>
